--- a/data/meta.yml
+++ b/data/meta.yml
@@ -1,2 +1,2 @@
 default_title: Akron Kitchen
-title_description: connecting Akron's food entrepreneurs
+title_description: connecting Akron's food entrepreneurs and furthering the local food movement in Akron, Ohio
