update info for Sally

--- a/data/members.yml
+++ b/data/members.yml
@@ -24,6 +24,6 @@ Ms. Julie:
   url: https://www.facebook.com/Ms-Julies-Kitchen-369998630016/
 
 Sally Ohle:
-  description: Owner of Summit Croissants, creating delictable home baked goods since 2005.
+  description: Owner of Summit Croissants, a home baking business located in Akron since 2005.
   image: members/sally-ohle.jpg
   url: http://www.summitcroissants.com/
