--- a/data/members.yml
+++ b/data/members.yml
@@ -9,7 +9,7 @@ Charlie Murphy:
   url: https://www.facebook.com/straydogcart/
 
 Jan Green:
-  description: Teaches healthy food preparation at Let's Grow Akron and heads up the Community Canning group.
+  description: Teaches healthy food preservation and preparation at Let's Grow Akron and heads up the Community Canning group.
   image: members/jan-green.jpg
   url: http://letsgrowakron.org/
 
